<resources>
    <string name="app_name">Ruralis</string>

    <string name="main_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="main_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- Photos Api -->
    <string name="photos_list_view" translatable="false">https://maps.googleapis.com/maps/api/place/photo?maxheight=200&amp;photoreference=%1$s&amp;key=%2$s</string>
    <!-- Details Api -->
    <string name="details_field" translatable="false">name,rating,formatted_phone_number,place_id,photo,type,opening_hours,vicinity,geometry,website,review</string>

    <!-- Types -->
    <string name="type_dairy_farmer">Dairy farmer</string>
    <string name="type_vegetable">Vegetable</string>
    <string name="type_honey">Honey</string>
    <string name="type_educational_farm">Education farm</string>
    <string name="type_egg_poultry">Egg/Poultry</string>
    <string name="type_beef_meat">Beef meat</string>
    <string name="type_pork_meat">Pork meat</string>
    <string name="type_mixed_livestock">Mixed livestock</string>
    <string name="type_fish">Fish</string>
    <string name="type_other">Other</string>

    <!-- Tab's title -->
    <string name="description_google">Establishment find son GoogleMap. Save it on Ruralis to modify his data !</string>
    <string name="tab_info">Info general</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_contact">contact</string>
    <string name="tab_comments">Comments</string>
    <string name="no_phone_number">No phone number</string>
    <string name="no_website">No website</string>
    <string name="favorite_establishment_name">Establishment\'s name</string>
    <string name="favorite_descr_photo">Favorite\'s photo</string>
    <string name="home_title_favorites">My favorites</string>
    <string name="photo_uploading">Download in progress…</string>
    <string name="settings_radius_km">Périmètre de recherche(en km)</string>
    <string name="details_opening_hours">Opening Hours</string>
    <string name="details_opening_example">Monday : 9h-18h</string>
    <string name="details_contact_map_info">Cliquez sur la carte pour afficher l\'itinéraire</string>
    <string name="login_connexion">Connexion</string>
    <string name="login_description_logo">Logo</string>
    <string name="error_firestore">Something went wrong, please check your connection</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="closed">Closed</string>
    <string name="type_product_shop">Magasin de producteur</string>
    <string name="type_alcool">Vin/Spiriteux</string>
    <string name="type_food_general">Alimentation</string>

    <!-- Settings -->
    <string name="settings_initialize_title">Réinitialiser</string>
    <string name="settings_save">Sauvegarder</string>
    <string name="settings_research_title">Définir les paramètres de recherche</string>
    <string name="settings_got_from_maps">Afficher les résultats de Google Maps</string>
    <string name="settings_save_snackbar">Les paramètres ont bien été modifiés</string>
    <string name="settings_initialize">Voulez-vous rétablir les paramètres par défaut ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="header_name">Nom</string>
    <string name="home_seach_btn">Find an farmer</string>
    <string name="home_quiz_btn">Test my knowledge</string>
    <string name="quiz_title_results">HighScore</string>
    <string name="start_quiz_btn">Start Quiz</string>
    <string name="home_title_knows_it">Do you know it ?</string>
    <string name="cannot_modify">Cet établissement ne peut pas être modifié</string>
    <string name="add_save">SAUVEGARDER</string>
    <string name="add_website">Website</string>
    <string name="add_phone_number">Phone number</string>
    <string name="add_contact_info">Contact</string>
    <string name="add_openings_btn_description">Add openings hours icon</string>
    <string name="add_openings_hours">Hours</string>
    <string name="add_openings_day">Day</string>
    <string name="add_openings">Horaires</string>
    <string name="add_address">Address</string>
    <string name="add_name">Name</string>
    <string name="add_info_text">Vous connaissez un lieu qui n\'est pas encore présent sur l\'application ? Remplissez le formulaire ci-dessous pour le partager avec les autres utilisateurs !</string>
    <string name="add_title">Ajouter un lieu</string>

    <!-- Guide Text -->
    <string name="home_guide_title_2">Voir les producteurs</string>
    <string name="home_guide_title_1">Bienvenue sur Ruralis !</string>
    <string name="home_guide_text_1">C\'est votre première connexion ! Vous verrez apparaître ici régulièrement une petite information intéressante sur le monde agricole et les animaux d\'élevage (cliquez pour continuer)</string>
    <string name="home_guide_text_2">En cliquant sur le bouton \'Rechercher un produit\' vous afficherez l\'écran de recherche des producteurs à proximité (cliquez pour continuer)</string>
    <string name="home_quide_title_3">Quiz</string>
    <string name="home_guide_text_3">En cliquez sur \'Tester mes connaissances\', vous aurez accès à un petit quiz sur le monde agricole !(cliquez pour continuer)</string>
    <string name="home_guide_title_4">Vos favoris</string>
    <string name="home_guide_text_4">Cette liste est pour l\'instant vide ! Mais vous pourrez ici voir apparaître vos producteurs favoris lorsque vous les aurez sélectionnée(cliquez pour continuer)</string>

    <string name="next_question">Suivant</string>
    <string name="botoom_map">Map</string>
    <string name="bottom_list">List</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_add">Add</string>
    <string name="toolbar_modify">Modify</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log out</string>
    <string name="not_connected_error">Seems like you\'re not connected to internet. Check your connexion and refresh</string>
    <string name="loading_questions">Loading questions…</string>
    <string name="good_answer">Bravo</string>
    <string name="bad_answer">Faux !</string>
    <string name="login_welcome_txt">Bienvenue sur Ruralis, mon panier fermier</string>
    <string name="list_name">NAME</string>
    <string name="list_type">TYPE</string>
    <string name="list_distance">DISTANCE</string>
    <string name="add_tags">Tags</string>
    <string name="add_tags_info">Write some useful tags (ex: cheese, bio, …)</string>
    <string name="question">Question</string>
    <string name="choice_one">Choice One</string>
    <string name="choice_two">Choice Two</string>
    <string name="choice_three">Choice Three</string>

    <!-- Openings -->
    <string name="monday_am">Monday am</string>
    <string name="monday_pm">Monday pm</string>
    <string name="tuesday_am">Tuesday am</string>
    <string name="tuesday_pm">Tuesday pm</string>
    <string name="wednesday_am">Wednesday am</string>
    <string name="wednesday_pm">Wednesday pm</string>
    <string name="thursday_am">Thursday am</string>
    <string name="thursday_pm">Thursday pm</string>
    <string name="friday_am">Friday am</string>
    <string name="friday_pm">Friday pm</string>
    <string name="saturday_am">Saturday am</string>
    <string name="saturday_pm">Saturday pm</string>
    <string name="sunday_am">Sunday am</string>
    <string name="sunday_pm">Sunday pm</string>
    <string name="establishment_succesfully_saved_snackbar">Establishment saved successfully ! </string>
    <string name="error_name">Please write a name</string>
    <string name="error_address">Please write an address</string>
    <string name="tag_no_favorite">No favorite</string>
    <string name="tag_favorite">Favorite</string>
    <string name="search_input">Search by keywords</string>
    <string name="website">Website</string>
    <string name="phone_number">Phone number</string>
    <string name="make_a_call">Make a call</string>
    <string name="visit_website">Visit website</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="default_param_btn">Restore default settings</string>
    <string name="write_comments">Write a comment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="score">Your score is %1$d/10. Write your name and save it</string>
    <string name="result">Results</string>
    <string name="example" translatable="false">Maraîcher</string>
    <string name="knows_it_image_description" translatable="false">Know\'s it\'s image</string>
    <string name="knows_it" translatable="false">KNOWS IT</string>
    <string name="remove_openings" translatable="false">Remove openings</string>

</resources>
